--- a/.hintrc
+++ b/.hintrc
@@ -3,8 +3,13 @@
     "development"
   ],
   "hints": {
-    "axe/language": "off",
+    "axe/name-role-value": [
+      "default",
+      {
+        "button-name": "off"
+      }
+    ],
     "meta-viewport": "off",
-    "meta-charset-utf-8": "off"
+    "button-type": "off"
   }
 }
